test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/void/void_equality.plx
pub fn x(none) none;
pub fn main(none) i32 {
    #  you can't compare void expressions
    return x() == cast<none>(10)
}
